Minor cosmetic updates

--- a/TestStepperMotorApp/appsettings.json
+++ b/TestStepperMotorApp/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AxElControllerSettings": {
     "MinimumLogLevel": "Warning",
-    "HardwareMode": "Emulated",
+    "HardwareMode": "Real",
     "MicrosteppingMode": "M4",
     "MoveToCommands": [
       {
-        "Az": 90.0,
+        "Az": 359.9,
         "El": 45.0,
         "Duration": 20.0
       },
