--- a/AirCraftDetector/AirCraftDetector.csproj
+++ b/AirCraftDetector/AirCraftDetector.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeoUtil\GeoUtil.csproj" />
+  </ItemGroup>
+
 </Project>
