Initial check-in of FlightTrackerApp and added common enum for hardware mode

--- a/LEDController/LEDController.csproj
+++ b/LEDController/LEDController.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Iot.Device.Bindings" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HardwareMode\HardwareMode.csproj" />
+  </ItemGroup>
+
 </Project>
