--- a/StepperMotorController/StepperMotorController.csproj
+++ b/StepperMotorController/StepperMotorController.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Iot.Device.Bindings" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HardwareMode\HardwareMode.csproj" />
+  </ItemGroup>
+
 </Project>
