--- a/FlightTracker3DApp/FlightTracker3DApp.csproj
+++ b/FlightTracker3DApp/FlightTracker3DApp.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\HardwareMode\HardwareMode.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
