Before stabilization at raspberry

--- a/FlightTracker3DApp/FlightTracker3DApp.csproj
+++ b/FlightTracker3DApp/FlightTracker3DApp.csproj
@@ -21,7 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings.json">
+    <Compile Update="FlightTracker3DAppSettings.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="FlightTracker3DAppSettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
