Added hardware mode for AirtrackListener

--- a/FlightTracker3DApp/FlightTracker3DAppSettings.json
+++ b/FlightTracker3DApp/FlightTracker3DAppSettings.json
@@ -4,7 +4,8 @@
     "HardwareModes": {
       "LcdHardwareMode": "EmulatedSilent",
       "LedHardwareMode": "EmulatedSilent",
-      "StepperMotorHardwareMode": "Emulated"
+      "StepperMotorHardwareMode": "Emulated",
+      "AirCraftListenerMode": "Emulated"
     }
   }
 }
